# pyrocko

./: .coverage  .coveragerc  .drone.yml  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .stickler.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  MANIFEST.in  README  README.md  animate.py  cakes_P_arrivals.py  evalresp-3.3.0-custom-bool.patch  evalresp-3.3.0-fix-forwards.patch  evalresp-3.3.0-fprintf-fmtstr.patch  evalresp-3.3.0-rm-atof-decl.patch  evalresp-3.3.0-undef-complex.patch  install.py  install_prerequisites.py  libmseed-2.19.6-fix-blkt-395-bswap.patch  libmseed-2.19.6-selection-fallthru.patch  libmseed-2.19.6-speedread.patch  libmseed-2.19.6-speedswap.patch  prerequisites.sh  pyproject.toml  readme.txt  requirements-all.txt  requirements-conda-windows.txt  requirements-conda.txt  requirements.txt  setup.cfg  setup.py  test.sh
.gitea/: issue_template.md  pull_request_template.md
apps/: automap  cake  fomosto  hamster  jackseis  momo  slinksnuff  snuffler  snufflometer  snuffslink
contrib/: likelihood.py  seismosizer_test.py
debian/: control  rules
doc/: Makefile  README.md  apps.rst  apps_cake.rst  apps_cake_manual.rst  apps_fomosto.rst  apps_fomosto_backends.rst  apps_fomosto_tutorial.rst  apps_snuffler.rst  apps_snuffler_extensions.rst  apps_snuffler_manual.rst  apps_snuffler_tutorial.rst  beachball.rst  cake.rst  cake_doc.rst  catalog.rst  conf.py  crust2x2.rst  evalresp.rst  examples.rst  examples_old.rst  fdsn.rst  fomosto.rst  gf.rst  gui_util.rst  image.eps  index.rst  install.rst  install_anaconda2.rst  install_deb.rst  install_details.rst  install_fedora.rst  install_mac.rst  install_quick.rst  install_suse.rst  library.rst  model.rst  moment_tensor.rst  orthodrome.rst  pile.rst  (+26 more)
doc/pyrockotheme/: layout.html
doc/source/: conf.py  index.rst  overview.rst
doc/tutorials/: cake_raytracing.rst  catalog_search.rst  crustdb.rst  dataset.rst  dataset_management.rst  deconvolution.rst  fdsn_download.rst  forward.rst  gf_forward.rst  gf_store.rst  misfit.rst  orthodrome.rst  plotting.rst  trace_handling.rst  trace_processing.rst  velocity_databases.rst
docker/: Dockerfile  build_docker_images.sh
docker/aux/: Dockerfile
docker/build-deb-10/: Dockerfile
docker/docs/: Dockerfile
examples/: 1989.072.evt.mseed  README.md  RESP.CZ.KHC..BHE  RESP.CZ.KHC..BHN  RESP.CZ.KHC..BHZ  STS2-Generic.polezero.txt  automap_example.py  automap_example2.py  beachball_example01.py  beachball_example02.py  beachball_example03.py  beachball_example04.py  beachball_example05.py  beachball_example06.py  beachballs.py  cake_arrivals.py  cake_first_arrivals.py  cake_raytracing.py  catalog_search_geofon.py  chopper.py  convert_mseed_ascii.py  convert_mseed_sac.py  convert_sac_mseed  convert_sac_mseed.py  copacabana.py  distance.py  downsample.py  dynamic_rupture_map.py  dynamic_rupture_movie.py  dynamic_rupture_viewer.py  eikonal_example1.py  eikonal_example2.py  extract.py  fdsn_request_geofon.py  fdsn_stationxml_modify.py  gf_custom_stf.py  gf_forward_example1.py  gf_forward_example2.py  gf_forward_example2_kite.py  gf_forward_example2_sill.py  (+76 more)
extras/: fomosto  pyrocko
maintenance/: anaconda-meta.yaml  anaconda_deploy.sh  argparse_help_to_rst.py  check-eols.py  deploy-anaconda.sh  deploy-anaconda2.sh  deploy-anaconda3.sh  deploy-anaconda_linux.sh  deploy-anaconda_mac.sh  deploy-anaconda_macvm.sh  deploy-anaconda_win.sh  deploy-docs.sh  deploy-pypi-sdist.sh  deploy-pypi.sh  deploy_anaconda.sh  deps-graph.sh  docstring_cop.py  drone-deploy-docs.sh  drone-matterpost.py  drone-rsync.sh  matterpost.py  readme-pip.rst  run_tests_windows.py  server-user_survey.py  server-user_survey.service  simplify-models.sh  update-docs.sh  update-pages.sh  vagrant_boxes_destroy.sh  vagrant_boxes_update.sh  vagrant_tests_collect.py  vagrant_tests_run.sh  windows-install-compiler.bat
prerequisites/: prerequisites.bat  prerequisites.sh  prerequisites_arch_python2.sh  prerequisites_arch_python3.sh  prerequisites_centos_python2.sh  prerequisites_centos_python3.sh  prerequisites_debian.sh  prerequisites_debian_python2.sh  prerequisites_debian_python3.sh  prerequisites_fedora.sh  prerequisites_opensuse.sh  prerequisites_opensuse_python2.sh  prerequisites_opensuse_python3.sh  prerequisites_rpm_python3.sh  prerequisites_ubuntu.sh
pyrocko/: autopick.py  autopick_ext.c  cake.py  cake_plot.py  catalog.py  config.py  crust2x2.py  datacube.py  dummy_progressbar.py  edl.py  evalresp.py  evalresp_ext.c  eventdata.py  file.py  forked.py  gcf.py  gse.py  gse2.py  gse_ext.c  gui_util.py  guts.py  hamster_pile.py  hpt.py  io.py  io_common.py  ipc.py  iris_ws.py  kan.py  model.py  moment_tensor.py  moment_tensor_viewer.py  mopad.py  mseed.py  mseed_ext.c  nano.py  orthodrome.py  parimap.py  pchain.py  pile.py  pile_viewer.py  (+23 more)
src/: __init__.py  ahfullgreen.py  ahfullgreen_ext.c  automap.py  autopick.py  autopick_ext.c  beachball.py  cake.py  cake_plot.py  carpet.py  catalog.py  color.py  config.py  crust2x2.py  crust2x2_data.py  crustdb.py  crustdb_abbr.py  css.py  cuda.py  datacube.py  datacube_ext.c  deps.py  dummy_progressbar.py  edl.py  evalresp.py  evalresp_ext.c  eventdata.py  example.py  file.py  forked.py  gcf.py  geometry.py  geonames.py  get_terminal_size.py  gmtpy.py  gse1.py  gse2.py  gse2_ext.c  gse2_io_wrap.py  gse2_old.py  (+66 more)
test/: 2010.057.20.30.26.5356.IC.BJT.00.LHZ.R.SAC  __init__.py  common.py  datasource_deprecated.py  depr_test_forked.py  depr_test_hamster.py  detect.mseed  run.py  speed_filtering.py  test_ahfull.py  test_all.py  test_automap.py  test_avl.py  test_backwards_compat.py  test_beachball.py  test_cake.py  test_catalog.py  test_crust2x2.py  test_crustdb.py  test_datacube.py  test_datasource.py  test_eikonal.py  test_entrypoints.py  test_examples.py  test_fdsn.py  test_fomosto.py  test_fomosto_report.py  test_forked.py  test_geonames.py  test_gf.py  test_gf_ahfull.py  test_gf_all.py  test_gf_benchmark.py  test_gf_ps2d.py  test_gf_psgrn_pscmp.py  test_gf_qseis.py  test_gf_qseis2d.py  test_gf_qseis_qseis2d.py  test_gf_qssp.py  test_gf_scenarios.py  (+38 more)
(+853 files in other folders)
