[metadata]
long_description= file: maintenance/readme-pip.rst

[bdist_wheel]
universal=1

[build_ext]
inplace=0

[nosetests]
verbosity=2
cover-erase=1
cover-package=pyrocko

[coverage:report]
exclude_lines =
    def __repr__
    def __str__
    raise AssertionError
    raise NotImplementedError
    raise ValueError
    raise
    if __name__ == .__main__.:
    logger.error
    if pyrocko.grumpy:

[coverage:paths]
source =
    src/
    /usr/lib/*/pyrocko/
    /usr/local/lib/*/pyrocko/

[flake8]
exclude =
    src/gui/qt_compat.py
