[metadata]
description-file = file: maintenance/readme-pip.rst
license-file = file: LICENSE.md

[options]
install_requires = numpy>=1.8
    scipy
    pyyaml
    matplotlib
    progressbar2
    future
    requests
    nose
    PyOpenGL

[bdist_wheel]
universal=1

[build_ext]
inplace=1

[nosetests]
verbosity=2
detailed-errors=1
with-coverage=1
cover-erase=1
cover-package=pyrocko

[coverage:report]
exclude_lines =
    def __repr__
    def __str__
    raise AssertionError
    raise NotImplementedError
    raise ValueError
    raise
    if __name__ == .__main__.:
    logger.error
    if pyrocko.grumpy:

[flake8]
exclude =
    src/gui/qt_compat.py
